k8s/network-policies/02-allow-backend-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: task-backend
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 3306
    - ports:
        - protocol: TCP
          port: 443
    - ports:
        - protocol: UDP
          port: 53
